更新了好多东西但是我也不知道具体是什么，我忘了QAQ

--- a/Sango.InTimeSnippet.WPF/MainWindow.xaml
+++ b/Sango.InTimeSnippet.WPF/MainWindow.xaml
@@ -9,6 +9,6 @@
         WindowStartupLocation="CenterScreen" Topmost="True" WindowStyle="None" MouseDown="Window_MouseDown"
         >
     <Grid MouseDown="Grid_MouseDown">
-        <local:SnippetBoxes Margin="4,4,4,4"/>
+        <local:SnippetBoxes x:Name="SnippetBox" Margin="4,4,4,4"/>
     </Grid>
 </Window>
